Change log
==========

1.3 (unreleased)
----------------


1.2 (2017-06-01)
----------------
- For Python 2.x, only support Python 2.7 now
- switch from ``python-ldap`` to ``pyldap`` for Python 3 compatibility
- add PEP 8 testing with ``flake8`` to the ``tox`` test config
- code reformatting for PEP 8
- Python 3 compatibilty
- use pkgutil-style namespace declaration
- package cleanup (``.gitignore``, ``MANIFEST.in``, ``README.rst``)
- docs cleanup (``Makefile``, ``conf.py``)
- tests cleanup (``tox.ini``, ``.travis.yml``)
- remove unsupported documentation bits
- fix coverage tests to only test this package
- remove coveralls from the Travis CI configuration


1.1 (2012-10-18)
----------------
- the Filter object will now clean up filter values during creation
  by stripping leading and trailing whitespace. This corresponds to 
  normal LDAP servers' behavior, such as OpenLDAP, where values match 
  regardless of leading or trailing spaces in the query's value.


1.0 (2012-04-20)
----------------
- refactor the monolithic original module into manageable and 
  testable submodules
- convert functions to class methods
- convert doctests to unit tests
- improve test coverage
- Initial release. For changes prior to this release please see the 
  ``dataflake.ldapconnection`` package up to release 1.4.
- add convenience ``tox`` script to buildout
- fix problem with BASE scoped-searches that specified additional 
  filters
- add coverage testing to tox configuration
- Extended ``dataflake.fakeldap.RaisingFakeLDAPConnection`` to accept 
  a list of exceptions to raise. On each call to the method that is set
  to raise the exception, the first item in the exception list
  is removed and raised. This allows testing code areas nested in
  more than one ``try/except`` clause.


Earlier changes
---------------
For earlier changes, please see the change log in the 
``dataflake.ldapconnection`` package prior to version 1.4.