@@ -3,6 +3,7 @@ Change log
 
 1.3 (unreleased)
 ----------------
+- Python 2/3 compatibility fixes for ``dataflake.ldapconnection``
 
 
 1.2 (2017-06-01)
